@@ -359,6 +359,9 @@ C
 ##         Thus for element A[i,j] in an MxN matrix,
 ##         column(0) / M  gives the row index i
 ##         column(0) % M  gives the column index j
+#b (5.4.5) The position of the key box can be manually tweaked by giving an
+##         offset added to whatever position the program would otherwise use.
+##         See `set key offset`.
 #end
 
 4 Changes
@@ -10878,6 +10881,7 @@ Ffigure_missing
              {{no}box {linestyle <style> | linetype <type> | linewidth <width>}}
              {maxcols {<max no. of columns> | auto}}
              {maxrows {<max no. of rows> | auto}}
+             {offset <dx>, <dy>}
        unset key
        show key
 
@@ -11104,6 +11108,14 @@ Ffigure_keyentry
  is given is to align the key as though it were text positioned using the
  label command, i.e., `left` means left align with key to the right of
  <position>, etc.
+4 key offset
+?commands set key offset
+?set key offset
+?key offset
+ Regardless of the key placement options chosen, the final position of the key
+ can be adjusted manually by specifying an offset.  As usual, the x and y
+ components of the offset may be given in character, graph, or screen
+ coordinates.
 4 key samples
 ?commands set key samples
 ?set key samples
