@@ -139,7 +139,7 @@ enum set_key_id {
     S_KEY_AUTOTITLES, S_KEY_NOAUTOTITLES,
     S_KEY_DEFAULT, S_KEY_ON, S_KEY_OFF,
     S_KEY_MAXCOLS, S_KEY_MAXROWS,
-    S_KEY_FRONT, S_KEY_NOFRONT
+    S_KEY_FRONT, S_KEY_NOFRONT, S_KEY_OFFSET
 };
 
 enum set_colorbox_id {
